--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,18 +27,26 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation project (":di")
+    implementation project (":navigation")
+    implementation project (":ui-splash")
+    implementation project (":ui-onboarding")
+    implementation project (":ui-forme")
+    implementation project (":ui-food")
+    implementation project (":ui-core")
+
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation "com.google.android.material:material:1.0.0-rc01"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
-    implementation "androidx.navigation:navigation-fragment:2.0.0"
-
-    implementation 'com.github.valeryponomarenko.componentsmanager:androidx:2.0.1'
     implementation 'com.google.dagger:dagger:2.21'
+    implementation 'com.google.dagger:dagger-android:2.21'
+    implementation ("com.google.dagger:dagger-android-support:2.21") {
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
     kapt 'com.google.dagger:dagger-compiler:2.21'
+    kapt 'com.google.dagger:dagger-android-processor:2.21'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
