--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':core', ':onboarding', ':forme', ':splash', ':food'
+include ':core', ':ui-onboarding', ':ui-forme', ':ui-splash', ':ui-food', ':navigation', ':di', ':ui-core'
